--- a/index.html
+++ b/index.html
@@ -1,11 +1,263 @@
 <!DOCTYPE html>
-<html lang="zh">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-        <title></title>
-    </head>
-    <body>
-        body
-    </body>
+<html lang="zh-cn">
+  <head>
+    <meta charset="utf-8">
+    <title>人仁医</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="LokiiArt">
+
+
+    <!-- <link rel="stylesheet" href="./css/pure-min.css" type="text/css" media="all" /> -->
+        <!-- <link rel="stylesheet" href="css/grids-responsive-old-ie-min.css" type="text/css" media="all" /> -->
+        <!-- <link rel="stylesheet" href="css/grids-responsive-min.css" type="text/css" media="all" /> -->
+
+    <!-- Le styles -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/custom.css" type="text/css" media="all" />
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
+
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="../assets/ico/favicon.png">
+  </head>
+
+  <body>
+        <div class="temp-custom-wrapper pure-g-g" id="temp-menu">
+            <div class="container">
+                <div class="logo"><a href="#" title="人仁医_专业医学数据集成服务">人仁医</a></div>
+                <div class="brand">
+                    人仁医<br />
+                    <em>专业医学数据集成服务</em>
+                </div>
+                <div class="top-contact">
+                    <div class="tb-telephone">
+                    </div>
+                    咨询电话：4006-808-606
+                </div>
+            </div>
+            <!-- <div class="pure-u-1 pure-u-md-1-3"> -->
+                <!-- <div class="pure-menu"> -->
+                    <!-- <a href="#" class="pure-menu-heading custom-brand">人仁医</a> -->
+                    <!-- <a href="#" class="custom-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a> -->
+                <!-- </div> -->
+            <!-- </div> -->
+            <!-- <div class="pure-u-1 pure-u-md-1-3"> -->
+                <!-- <div class="pure-menu pure-menu-horizontal custom-can-transform"> -->
+                    <!-- <ul class="pure-menu-list"> -->
+                        <!-- <li class="pure-menu-item"><a href="#" class="pure-menu-link">Home</a></li> -->
+                        <!-- <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li> -->
+                        <!-- <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li> -->
+                    <!-- </ul> -->
+                <!-- </div> -->
+            <!-- </div> -->
+            <!-- <div class="pure-u-1 pure-u-md-1-3"> -->
+                <!-- <div class="pure-menu pure-menu-horizontal custom-menu-3 custom-can-transform"> -->
+                    <!-- <ul class="pure-menu-list"> -->
+                        <!-- <li class="pure-menu-item"><a href="#" class="pure-menu-link">Yahoo</a></li> -->
+                        <!-- <li class="pure-menu-item"><a href="#" class="pure-menu-link">W3C</a></li> -->
+                    <!-- </ul> -->
+                <!-- </div> -->
+            <!-- </div> -->
+        </div>
+        <section id="hero">
+            <div id="myCarousel" class="carousel slide">
+            <div class="carousel-inner">
+                <div class="item active" style="background-image:url('images/banner.png');background-position:20% 0%">
+                    <div class="carousel-zhanwei">
+                    </div>
+                    <div class="container">
+                        <div  class="carousel-caption">
+                        <h1>提供医学数据聚合服务</h1>
+                        <!-- <p class="lead"> justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> -->
+                        <p>实施快 费用低 安全稳定</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item" style="background-image:url('images/banner.png');background-position:20% 0%">
+                    <div class="container">
+                        <div  class="carousel-caption">
+                        <h1>提供医学数据聚合服务</h1>
+                        <!-- <p class="lead"> justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> -->
+                        <p>实施快 费用低 安全稳定</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item" style="background-image:url('images/banner.png');background-position:20% 0%">
+                    <div class="container">
+                        <div  class="carousel-caption">
+                        <h1>提供医学数据聚合服务</h1>
+                        <!-- <p class="lead"> justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> -->
+                        <p>实施快 费用低 安全稳定</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
+        </div>
+        </section>
+        <section id="data">
+            <div class="container">
+                <div class="row hidden-phone">
+                    <div class="section-content section-content-down span4 offset7">
+                        <h1>数据聚合</h1>
+                        <p>
+                        人仁医通过其金融级中间件技术平台，可快速实现院内HIS、LIS、PACS、EMR等系统数据的实时融合自动完成数据采集、清洗、转化、打包，破除信息孤岛，实现院内数据可用。
+                        </p>
+                    </div>
+                </div>
+                <div class="row data-image-row">
+                    <div class="span3 phone-img-description">
+                        <img src="images/12.png" alt=""/>
+                    </div>
+                    <div class="span1  hidden-phone">
+                        <div style="height:100px">
+                        </div>
+                       <img src="images/15.png" alt=""/> 
+                    </div>
+                    <div class="span3  hidden-phone">
+                        <img src="images/13.png" alt=""/>
+                    </div>
+                    <div class="span1  hidden-phone">
+                        <div style="height:100px">
+                        </div>
+                       <img src="images/15.png" alt=""/> 
+                    </div>
+                    <div class="span3  hidden-phone">
+                        <img src="images/14.png" style="height:270px;width:261px;" alt=""/>
+                    </div>
+                </div>
+                <div class="row visible-phone">
+                    <div class="section-content section-content-down span4 offset7">
+                        <h1>数据聚合</h1>
+                        <p>
+                        人仁医通过其金融级中间件技术平台，可快速实现院内HIS、LIS、PACS、EMR等系统数据的实时融合自动完成数据采集、清洗、转化、打包，破除信息孤岛，实现院内数据可用。
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="app">
+            <div class="container">
+                <div class="row">
+                    <div class="section-content span5 offset1 text-center hidden-phone">
+                        <h1>行业应用</h1>
+                        <p>
+                        人仁医医疗数据集成平台让海量医疗数据触手可及，支持各应用场景下的数据挖掘和可视化呈现，广泛服务于各类医疗应用系统，助力行业发展，为医生病患提供极致体验
+                        </p>
+                    </div>
+                    <div class="span5 offset1">
+                        
+                    </div>
+                    <div class="section-content span5 o text-center visible-phone">
+                        <h1>行业应用</h1>
+                        <p>
+                        人仁医医疗数据集成平台让海量医疗数据触手可及，支持各应用场景下的数据挖掘和可视化呈现，广泛服务于各类医疗应用系统，助力行业发展，为医生病患提供极致体验
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="platform">
+            <div class="container text-center hidden-phone">
+                <h1>平台性能</h1>
+                <p>系统数据借口遵循国际医学标准，兼备兼容性和可拓展性，<br />平台采用通讯中间件实现动态负载均衡支持海量级的大并发访问，<br />通过业务中间件的分布式处理完成大数据运算、<br />容错处理、保障系统可靠性</p>
+            </div>
+            <div class="container text-center">
+                <img src="images/16.png" alt=""/>
+            </div>
+            <div class="container text-center visible-phone">
+                <h1>平台性能</h1>
+                <p>系统数据借口遵循国际医学标准，兼备兼容性和可拓展性，<br />平台采用通讯中间件实现动态负载均衡支持海量级的大并发访问，<br />通过业务中间件的分布式处理完成大数据运算、<br />容错处理、保障系统可靠性</p>
+            </div>
+        </section>
+        <section id="example">
+            <div class="container">
+                <div class="section-content section-content-down row text-center">
+                    <h1>成功案例</h1>
+                    <p>广东省温国辉副省长亲临</p>
+                    <p>广东省第二人民医院考察人仁医分级诊疗运营平台在阳山县的试点</p>
+                    <p>国内首先实现省县乡医疗一体化，迈出分级诊疗模式探索重要的一步！</p>
+                </div>
+                <div class="row example-image-row">
+                    <ul class="thumbnails">
+                        <li class="span3">
+                            <div class="thumbnail">
+                                <img src="images/pc-thumbnail_03.gif" alt=""/>
+                            </div>
+                        </li>
+                        <li class="span3">
+                            <div class="thumbnail">
+                                <img src="images/pc-thumbnail_05.gif" alt=""/>
+                            </div>
+                        </li>
+                        <li class="span3">
+                            <div class="thumbnail">
+                                <img src="images/pc-thumbnail_07.gif" alt=""/>
+                            </div>
+                        </li>
+                        <li class="span3">
+                            <div class="thumbnail">
+                                <img src="images/pc-thumbnail_09.png" alt=""/>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section id="team">
+            <div class="container">
+                <div class="section-content row text-center">
+                    <h1>技术团队</h1>
+                    <p>人仁医拥有十年金融级中间件的技术积累和业界最高效率的</p>
+                    <p>医学数据聚合实施团队，</p>
+                    <p>团队成员曾参与过国内第一个区域医疗项目：深圳139工程</p>
+                </div>
+                <div class="container text-center">
+                    <img src="images/team-bg-1.png" alt=""/>
+                    <br />
+                    <img src="images/17.png" alt=""/>
+                </div>
+                <div class="container text-center">
+                    <h2>联系我们</h2>
+                    <p>深圳市人仁医科技有限公司</p>
+                    <p>深圳市南山区软件产业基地5栋C座201-3F</p>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="span4 offset4">
+                            <div class="row-fluid">
+                                <div class="span6  text-center">
+                                    合作邮箱：bd@kimed.me
+                                </div>
+                                <div class="span6 text-center">
+                                    咨询电话：4006-808-606
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        All Rights Reserved. 粤ICP备10020962号－5
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="js/jquery.min.js"></script>
+    <script src="./js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+    <!-- <script src="js/custom.js" type="text/javascript" charset="utf-8"></script> -->
+  </body>
 </html>
+
