--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="container">
                 <div class="row hidden-phone">
                     <div class="section-content section-content-down span4 offset7">
-                        <h1>数据聚合</h1>
+                        <h2>数据聚合</h2>
                         <p>
                         人仁医通过其金融级中间件技术平台，可快速实现院内HIS、LIS、PACS、EMR等系统数据的实时融合自动完成数据采集、清洗、转化、打包，破除信息孤岛，实现院内数据可用。
                         </p>
@@ -133,12 +133,14 @@
                        <img src="images/15.png" alt=""/> 
                     </div>
                     <div class="span3  hidden-phone">
-                        <img src="images/14.png" style="height:270px;width:261px;" alt=""/>
+                        <div style="height:80px">
+                        </div>
+                        <img src="images/14.png" alt=""/>
                     </div>
                 </div>
                 <div class="row visible-phone">
                     <div class="section-content section-content-down span4 offset7">
-                        <h1>数据聚合</h1>
+                        <h2>数据聚合</h2>
                         <p>
                         人仁医通过其金融级中间件技术平台，可快速实现院内HIS、LIS、PACS、EMR等系统数据的实时融合自动完成数据采集、清洗、转化、打包，破除信息孤岛，实现院内数据可用。
                         </p>
@@ -147,19 +149,20 @@
             </div>
         </section>
         <section id="app">
-            <div class="container">
-                <div class="row">
+            <div class="container app-container">
+                <div class="row" style="margin-top:3em;">
                     <div class="section-content span5 offset1 text-center hidden-phone">
-                        <h1>行业应用</h1>
+                        <h2>行业应用</h2>
                         <p>
                         人仁医医疗数据集成平台让海量医疗数据触手可及，支持各应用场景下的数据挖掘和可视化呈现，广泛服务于各类医疗应用系统，助力行业发展，为医生病患提供极致体验
                         </p>
                     </div>
-                    <div class="span5 offset1">
-                        
+                    <div class="span5 offset1 phone-app-bg">
+                        <img class="visible-phone" src="images/app-banner.png" alt=""/>
+                        <img class="hidden-phone" src="images/app-pc-banner.png" alt=""/>
                     </div>
                     <div class="section-content span5 o text-center visible-phone">
-                        <h1>行业应用</h1>
+                        <h3>行业应用</h3>
                         <p>
                         人仁医医疗数据集成平台让海量医疗数据触手可及，支持各应用场景下的数据挖掘和可视化呈现，广泛服务于各类医疗应用系统，助力行业发展，为医生病患提供极致体验
                         </p>
@@ -169,21 +172,23 @@
         </section>
         <section id="platform">
             <div class="container text-center hidden-phone">
-                <h1>平台性能</h1>
+                <h2>平台性能</h2>
                 <p>系统数据借口遵循国际医学标准，兼备兼容性和可拓展性，<br />平台采用通讯中间件实现动态负载均衡支持海量级的大并发访问，<br />通过业务中间件的分布式处理完成大数据运算、<br />容错处理、保障系统可靠性</p>
             </div>
-            <div class="container text-center">
-                <img src="images/16.png" alt=""/>
+            <div class="container text-center platform-images">
+                <img class="hidden-phone" src="images/16.png" alt=""/>
+                <img class="visible-phone" src="images/HIPAA.png" alt=""/>
+                <img class="visible-phone" src="images/Group.png" alt=""/>
             </div>
             <div class="container text-center visible-phone">
-                <h1>平台性能</h1>
+                <h2>平台性能</h2>
                 <p>系统数据借口遵循国际医学标准，兼备兼容性和可拓展性，<br />平台采用通讯中间件实现动态负载均衡支持海量级的大并发访问，<br />通过业务中间件的分布式处理完成大数据运算、<br />容错处理、保障系统可靠性</p>
             </div>
         </section>
         <section id="example">
             <div class="container">
                 <div class="section-content section-content-down row text-center">
-                    <h1>成功案例</h1>
+                    <h2>成功案例</h2>
                     <p>广东省温国辉副省长亲临</p>
                     <p>广东省第二人民医院考察人仁医分级诊疗运营平台在阳山县的试点</p>
                     <p>国内首先实现省县乡医疗一体化，迈出分级诊疗模式探索重要的一步！</p>
@@ -217,7 +222,7 @@
         <section id="team">
             <div class="container">
                 <div class="section-content row text-center">
-                    <h1>技术团队</h1>
+                    <h2>技术团队</h2>
                     <p>人仁医拥有十年金融级中间件的技术积累和业界最高效率的</p>
                     <p>医学数据聚合实施团队，</p>
                     <p>团队成员曾参与过国内第一个区域医疗项目：深圳139工程</p>
